Bug 245372 - windows are flashing and aren't drawn correctly
Summary: windows are flashing and aren't drawn correctly
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 257522 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-21 23:32 UTC by Jan
Modified: 2010-11-23 23:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.4
Sentry Crash Report:


Attachments
bad screenshot of the problem (151.21 KB, image/jpeg)
2010-07-21 23:50 UTC, Jan
Details
my xorg.conf directory (1.80 KB, application/x-gzip)
2010-11-05 20:44 UTC, Rafał Malinowski
Details
log file (30.07 KB, text/x-log)
2010-11-05 20:44 UTC, Rafał Malinowski
Details
patch attempt (2.45 KB, patch)
2010-11-06 22:13 UTC, Thomas Lübking
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan 2010-07-21 23:32:29 UTC
Version:           unspecified (using Devel) 
OS:                Linux

sometimes windows flash and don't get drawn correctly.
the application is working well, but suddenly the windows isn't drawn anymore. only parts are visible. moving the mouse over the window let parts reappear.
minimizing the window and reopen it resolves this issue.

Reproducible: Sometimes




Nvidia 9500GT graphic card with proprietary driver
kwin compositing is active
Comment 1 Jan 2010-07-21 23:50:55 UTC
Created attachment 49375 [details]
bad screenshot of the problem

as i can't make a screenshot using a desktop tool as the window get redrawn at the same moment i start the tool or trying to make a screenshot, i have to use an external cam.
Comment 2 Jan 2010-07-24 16:02:36 UTC
with disabled desktop effects this doesn't seems to exist. I will try out to find if every kwin desktop effect is producing this really unhealthy bug.
(this doesn't causes data lose, but health risks ;) )
Comment 3 Rafał Malinowski 2010-11-04 22:51:17 UTC
I confirm this. NVidia 8600M here, this bug exists for long time and i've tried many versions of NVidia proprietary drivers.

This accurs only when composition is active.
My composition settings:
- OpenGL
- Preview only for visible windows
- Suspend desktop effects for fullscreen windows
- OpenGL mode: texture from pixmap
- Twolinear filter
- Direct rendering
- VSync enabeled
Comment 4 Thomas Lübking 2010-11-05 00:09:35 UTC
the taskbar preview popup?
Comment 5 Rafał Malinowski 2010-11-05 00:43:23 UTC
I don't understand this question. Do you want screenshot?
Comment 6 Thomas Lübking 2010-11-05 00:50:49 UTC
means "what can be seen on OP scrot looks alot like it could have been triggerend by the window preview that appears when you hover a taskbar entry"...

this would be triggered by either the "highlight window" but more likely the "sliding popup" effect...
Comment 7 Rafał Malinowski 2010-11-05 08:53:49 UTC
No, this happens randomly when clicking inside application.
I haven't noticed anything that could be connected to these two effect.
The scenario is simple: just use an application an wait for it to disappear. I'll try to use some desktop recording software to show this.
Comment 8 Thomas Lübking 2010-11-05 15:59:54 UTC
please attach /etc/X11/xorg.conf (if present) and /var/log/Xorg.0.log
Comment 9 Rafał Malinowski 2010-11-05 20:44:00 UTC
Created attachment 53173 [details]
my xorg.conf directory

I use OpenSuse factory, so I don't have xorg.conf file but xorg.conf.d directory
Comment 10 Rafał Malinowski 2010-11-05 20:44:58 UTC
Created attachment 53174 [details]
log file
Comment 11 Rafał Malinowski 2010-11-05 20:47:57 UTC
I think I can reproduce it on demand now. This is how I do it:
1. set up some virtual desktops
2. open Firefox on one (fullscreen)
3. open Akregator on another one (right half of screen)
4. go to firefox screen (i use keyboard shortcuts, this works with clicking on pager too)
5. click on firefox
6. go to akregator screen
7. click on akregator
8. click on plasma desktop
9. go to firefox screen
10. click on firefox, but in place where akregator window is (right half of firefox window)
11. right half of firefox window dissapears


Clickng on plasma desktop is essential here.
Comment 12 Thomas Lübking 2010-11-06 00:08:51 UTC
not reproducable here.
is it related to firefox (version?) / akregator (didn't have, tried with kmail)

also what effect plugins do you use*? "slide back"?

*fast dump:
grep -iE 'kwin4_effect_.*Enabled=true' `kde4-config --path config | cut -d":" -f1`/kwinrc | sed -e 's/kwin4_effect_//g; s/Enabled=true//g'
Comment 13 Rafał Malinowski 2010-11-06 00:50:01 UTC
blur
boxswitch
dashboard
desktopgrid
dialogparent
diminactive
dimscreen
glide
highlightwindow
login
logout
magiclamp
presentwindows
screenshot
shadow
slide
slideback
slidingpopups
startupfeedback
taskbarthumbnail
translucency
wobblywindows





I think it is related to Firefox. As soon as firefox started it happened.
I'll try to disable sideback plugin and check then.
Comment 14 Rafał Malinowski 2010-11-06 00:51:43 UTC
Removed slideback effect. Now everything is OK.
Comment 15 Thomas Lübking 2010-11-06 22:13:29 UTC
Created attachment 53207 [details]
patch attempt

ok, i'm probably too retarded to reproduce this, but i've a distant idea what casues this.

attached is a patch that might fix/workaround the assmumed issue.
if anyone who encounters this could please test the patch and report that would help alot. thanks.
Comment 16 Rafał Malinowski 2010-11-07 13:23:41 UTC
This works for me.
Thank you very much:)
Comment 17 Thomas Lübking 2010-11-07 13:56:45 UTC
http://svn.reviewboard.kde.org/r/5783/
Comment 18 Thomas Lübking 2010-11-14 19:03:05 UTC
SVN commit 1197040 by luebking:

Fix #245372 (clipping error on VD change)

BUG: 245372


 M  +12 -12    slideback.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1197040
Comment 19 Piotr Mitas 2010-11-21 19:29:24 UTC
*** Bug 257522 has been marked as a duplicate of this bug. ***
Comment 20 Thomas Lübking 2010-11-23 23:13:16 UTC
SVN commit 1200083 by luebking:

backporting r1197040 "clipping error on VD change"
CCBUG: 245372


 M  +12 -12    slideback.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1200083