Fix #245372 (clipping error on VD change)

BUG: 245372

svn path=/trunk/KDE/kdebase/workspace/; revision=1197040